--- a/challenge3/webapp/kumaki/app/views/houses/_count_has_child.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/_count_has_child.html.slim
@@ -1,16 +1,3 @@
 h4.dataset-heading has_child
-= pie_chart data_for_chart
-table.table.table-striped.mt-5
-  thead
-    tr
-      th scope="col"
-        | has_child
-      th scope="col"
-        | Count
-  tbody
-    - data_for_chart.each do |key, value|
-      tr
-        th scope="row"
-          = key
-        th
-          = value
+= render 'houses/pie_chart_of_has_child_with_count', data_for_chart: data_of_has_child_with_count(houses)
+= render 'houses/table_of_has_child_with_count', data_for_table: data_of_has_child_with_count(houses)
