--- a/challenge3/webapp/kumaki/app/views/houses/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/index.html.slim
@@ -1,8 +1,8 @@
 .row
   .col-4
-    = render 'cities/count', data_for_chart: data_of_num_of_people_with_count(@houses_group_by_city)
+    = render 'cities/count', houses: @houses_group_by_city
   .col-4
-    = render 'houses/count_num_of_people', data_for_chart: data_of_num_of_people_with_count(@houses_num_of_people)
+    = render 'houses/count_num_of_people', houses: @houses_num_of_people
   .col-4
-    = render 'houses/count_has_child', data_for_chart: data_of_has_child_with_count(@houses_has_child)
+    = render 'houses/count_has_child', houses: @houses_has_child
 = render 'houses/houses_table', houses: @houses_for_pagination
