--- a/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/datasets/index.html.slim
@@ -11,4 +11,4 @@
     = render 'datasets/scatter_chart_of_daylight_with_temperature', datasets: @datasets
   .col-6
     = render 'datasets/scatter_chart_of_energy_production_with_daylight', datasets: @datasets
-= render 'datasets/datasets_table', datasets: @datasets_for_pagination
+= render 'datasets/datasets_table', datasets: pagination_feature(@datasets)
