--- a/challenge3/webapp/kumaki/app/views/houses/index.html.slim
+++ b/challenge3/webapp/kumaki/app/views/houses/index.html.slim
@@ -5,4 +5,4 @@
     = render 'houses/count_num_of_people', houses: @houses_num_of_people
   .col-4
     = render 'houses/count_has_child', houses: @houses_has_child
-= render 'houses/houses_table', houses: @houses_for_pagination
+= render 'houses/houses_table', houses: pagination_feature(@houses)
