--- a/challenge3/webapp/shotaimoto/app/views/houses/show.html.haml
+++ b/challenge3/webapp/shotaimoto/app/views/houses/show.html.haml
@@ -1,2 +1,2 @@
 =@house.firstname
-.energy_production=line_chart @house.energies.map{|energy| energy.slice(:gotten_at, :energy_production).values }
+.energy_production=line_chart @house.energies.map{|energy| energy.slice(:gotten_at, :energy_production).values }, ytitle: "Energy Production"
