define_simulate_method
## what
- 電気料金の計算シミュレーションを実施するインスタンスメソッドを実装
- 上記メソッドで使用する各種メソッドを定義

## why
- 料金試算シミュレーション機能の実装
- 上記のリファクタリング

--- a/challengeA/shota_imoto/app/views/simulators/index.html.haml
+++ b/challengeA/shota_imoto/app/views/simulators/index.html.haml
@@ -1,5 +1,5 @@
 %h1 EnergySimulator
-= form_with url: simulate_simulators_path, model: @simulator, method: :get do |f|
+= form_with url: simulate_simulators_path, model: @simulator, method: :get, local: true do |f|
   .form
     契約アンペア(A)
     =f.number_field :current, step: "0.01"
@@ -9,13 +9,10 @@
   .btn
     =f.submit "計算"
 
-
-
-.registration_plan
-  =link_to "プラン登録", new_plan_path
-.registration_provider
-  =link_to "プロバイダー登録", new_provider_path
-.registration_basic_charge
-  =link_to "基本料金 登録", new_basic_charge_path
-.registration_usage_charge
-  =link_to "従量料金 登録", new_usage_charge_path
+.admin_menu
+  .title
+    %h2 管理メニュー
+  .registration_plan=link_to "プラン登録", new_plan_path
+  .registration_provider=link_to "プロバイダー登録", new_provider_path
+  .registration_basic_charge=link_to "基本料金 登録", new_basic_charge_path
+  .registration_usage_charge=link_to "従量料金 登録", new_usage_charge_path
