--- a/challengeA/shota_imoto/app/views/simulators/index.html.haml
+++ b/challengeA/shota_imoto/app/views/simulators/index.html.haml
@@ -1,4 +1,4 @@
-%h1 EnergySimulator
+%h1 EnergyCostSimulator
 = form_with url: simulate_simulators_path, model: @simulator, method: :get, local: true do |f|
   .form
     契約アンペア(A)
