正しいデータでグラフを表示するよう実装

--- a/challenge3/webapp/ishizaka/app/assets/stylesheets/graphs.scss
+++ b/challenge3/webapp/ishizaka/app/assets/stylesheets/graphs.scss
@@ -1,3 +1,57 @@
 // Place all the styles related to the Graphs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.l-wrap {
+  margin: 80px auto;
+}
+
+.l-heading {
+  margin-bottom: 45px;
+  text-align: center;
+  font-size: 24px;
+}
+
+.list-box {
+  width: 85%;
+  margin: 0 auto;
+  border: 1px solid #111111;
+  border-right: none;
+  border-bottom: none;
+}
+
+.list-box > .list {
+  display: flex;
+  width: 100%;
+  line-height: 30px;
+  border-bottom: 1px solid #111111;
+}
+
+.list-box > .list > .id {
+  width: 5%;
+  text-align: center;
+  border-right: 1px solid #111111;
+}
+
+.list-box > .list > .name {
+  width: 45%;
+  padding-left: 12px;
+  border-right: 1px solid #111111;
+}
+
+.list-box > .list > .city {
+  width: 30%;
+  padding-left: 12px;
+  border-right: 1px solid #111111;
+}
+
+.list-box > .list > .people {
+  width: 10%;
+  text-align: center;
+  border-right: 1px solid #111111;
+}
+
+.list-box > .list > .child {
+  width: 10%;
+  text-align: center;
+  border-right: 1px solid #111111;
+}
