--- a/challenge3/webapp/ishizaka/app/assets/stylesheets/graphs.scss
+++ b/challenge3/webapp/ishizaka/app/assets/stylesheets/graphs.scss
@@ -6,7 +6,7 @@
 }
 
 .l-heading {
-  margin-bottom: 45px;
+  margin-bottom: 25px;
   text-align: center;
   font-size: 24px;
 }
@@ -22,7 +22,7 @@
 .list-box > .list {
   display: flex;
   width: 100%;
-  line-height: 30px;
+  line-height: 40px;
   border-bottom: 1px solid #111111;
 }
 
@@ -33,25 +33,29 @@
 }
 
 .list-box > .list > .name {
-  width: 45%;
-  padding-left: 12px;
+  width: 35%;
+  padding-left: 20px;
   border-right: 1px solid #111111;
 }
 
 .list-box > .list > .city {
   width: 30%;
-  padding-left: 12px;
+  padding-left: 20px;
   border-right: 1px solid #111111;
 }
 
 .list-box > .list > .people {
-  width: 10%;
+  width: 15%;
   text-align: center;
   border-right: 1px solid #111111;
 }
 
 .list-box > .list > .child {
-  width: 10%;
+  width: 15%;
   text-align: center;
   border-right: 1px solid #111111;
+}
+
+.list-box > .list.-title {
+  text-align: center;
 }
